--- a/vercel.json
+++ b/vercel.json
@@ -15,10 +15,5 @@
       ]
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "cleanUrls": true
 }
