--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^10.7.1",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
