--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "firebase": "^12.4.0",
     "jspdf": "^3.0.3",
